libyaml/include/yaml.h


typedef unsigned char yaml_char_t;
typedef struct yaml_version_directive_s {
    int major;
    int minor;
} yaml_version_directive_t;
typedef struct yaml_tag_directive_s {
    yaml_char_t *handle;
    yaml_char_t *prefix;
} yaml_tag_directive_t;
typedef enum yaml_encoding_e {
    YAML_ANY_ENCODING,
    YAML_UTF8_ENCODING,
    YAML_UTF16LE_ENCODING,
    YAML_UTF16BE_ENCODING
} yaml_encoding_t;
typedef enum yaml_error_type_e {
    YAML_NO_ERROR,
    YAML_MEMORY_ERROR,
    YAML_READER_ERROR,
    YAML_SCANNER_ERROR,
    YAML_PARSER_ERROR,
    YAML_COMPOSER_ERROR,
    YAML_WRITER_ERROR,
    YAML_EMITTER_ERROR
} yaml_error_type_t;
typedef struct yaml_mark_s {
    size_t index;
    size_t line;
    size_t column;
} yaml_mark_t;
typedef enum yaml_scalar_style_e {
    YAML_ANY_SCALAR_STYLE,
    YAML_PLAIN_SCALAR_STYLE,
    YAML_SINGLE_QUOTED_SCALAR_STYLE,
    YAML_DOUBLE_QUOTED_SCALAR_STYLE,
    YAML_LITERAL_SCALAR_STYLE,
    YAML_FOLDED_SCALAR_STYLE
} yaml_scalar_style_t;
typedef enum yaml_sequence_style_e {
    YAML_ANY_SEQUENCE_STYLE,
    YAML_BLOCK_SEQUENCE_STYLE,
    YAML_FLOW_SEQUENCE_STYLE
} yaml_sequence_style_t;
typedef enum yaml_mapping_style_e {
    YAML_ANY_MAPPING_STYLE,
    YAML_BLOCK_MAPPING_STYLE,
    YAML_FLOW_MAPPING_STYLE
} yaml_mapping_style_t;
typedef struct yaml_token_s {
    yaml_token_type_t type;
    union {
        struct {
            yaml_encoding_t encoding;
        } stream_start;
        struct {
            yaml_char_t *value;
        } alias;
        struct {
            yaml_char_t *value;
        } anchor;
        struct {
            yaml_char_t *handle;
            yaml_char_t *suffix;
        } tag;
        struct {
            yaml_char_t *value;
            size_t length;
            yaml_scalar_style_t style;
        } scalar;
        struct {
            int major;
            int minor;
        } version_directive;
        struct {
            yaml_char_t *handle;
            yaml_char_t *prefix;
        } tag_directive;
    } data;
    yaml_mark_t start_mark;
    yaml_mark_t end_mark;
} yaml_token_t;
typedef enum yaml_event_type_e {
    YAML_NO_EVENT,
    YAML_STREAM_START_EVENT,
    YAML_STREAM_END_EVENT,
    YAML_DOCUMENT_START_EVENT,
    YAML_DOCUMENT_END_EVENT,
    YAML_ALIAS_EVENT,
    YAML_SCALAR_EVENT,
    YAML_SEQUENCE_START_EVENT,
    YAML_SEQUENCE_END_EVENT,
    YAML_MAPPING_START_EVENT,
    YAML_MAPPING_END_EVENT
} yaml_event_type_t;
typedef struct yaml_event_s {
    yaml_event_type_t type;
    union {
        struct yaml_event_stream_start {
            yaml_encoding_t encoding;
        } stream_start;
        struct yaml_event_document_start {
            yaml_version_directive_t *version_directive;
            struct {
                yaml_tag_directive_t *start;
                yaml_tag_directive_t *end;
            } tag_directives;
            int implicit;
        } document_start;
        struct yaml_event_document_end {
            int implicit;
        } document_end;
        struct yaml_event_alias {
            yaml_char_t *anchor;
        } alias;
        struct yaml_event_scalar {
            yaml_char_t *anchor;
            yaml_char_t *tag;
            yaml_char_t *value;
            size_t length;
            int plain_implicit;
            int quoted_implicit;
            yaml_scalar_style_t style;
        } scalar;
        struct yaml_event_sequence_start {
            yaml_char_t *anchor;
            yaml_char_t *tag;
            int implicit;
            yaml_sequence_style_t style;
        } sequence_start;
        struct yaml_event_mapping_start {
            yaml_char_t *anchor;
            yaml_char_t *tag;
            int implicit;
            yaml_mapping_style_t style;
        } mapping_start;
    } data;
    yaml_mark_t start_mark;
    yaml_mark_t end_mark;
} yaml_event_t;
YAML_DECLARE(int)
yaml_stream_start_event_initialize(yaml_event_t *event,
        yaml_encoding_t encoding);
YAML_DECLARE(void)
yaml_event_delete(yaml_event_t *event);
typedef enum yaml_node_type_e {
    YAML_NO_NODE,
    YAML_SCALAR_NODE,
    YAML_SEQUENCE_NODE,
    YAML_MAPPING_NODE
} yaml_node_type_t;
typedef struct yaml_document_s {
    struct {
        yaml_node_t *start;
        yaml_node_t *end;
        yaml_node_t *top;
    } nodes;
    yaml_version_directive_t *version_directive;
    struct {
        yaml_tag_directive_t *start;
        yaml_tag_directive_t *end;
    } tag_directives;
    int start_implicit;
    int end_implicit;
    yaml_mark_t start_mark;
    yaml_mark_t end_mark;
} yaml_document_t;
typedef int yaml_read_handler_t(void *data, unsigned char *buffer, size_t size,
        size_t *size_read);
typedef struct yaml_simple_key_s {
    int possible;
    int required;
    size_t token_number;
    yaml_mark_t mark;
} yaml_simple_key_t;
typedef enum yaml_parser_state_e {
    YAML_PARSE_STREAM_START_STATE,
    YAML_PARSE_IMPLICIT_DOCUMENT_START_STATE,
    YAML_PARSE_DOCUMENT_START_STATE,
    YAML_PARSE_DOCUMENT_CONTENT_STATE,
    YAML_PARSE_DOCUMENT_END_STATE,
    YAML_PARSE_BLOCK_NODE_STATE,
    YAML_PARSE_BLOCK_NODE_OR_INDENTLESS_SEQUENCE_STATE,
    YAML_PARSE_FLOW_NODE_STATE,
    YAML_PARSE_BLOCK_SEQUENCE_FIRST_ENTRY_STATE,
    YAML_PARSE_BLOCK_SEQUENCE_ENTRY_STATE,
    YAML_PARSE_INDENTLESS_SEQUENCE_ENTRY_STATE,
    YAML_PARSE_BLOCK_MAPPING_FIRST_KEY_STATE,
    YAML_PARSE_BLOCK_MAPPING_KEY_STATE,
    YAML_PARSE_BLOCK_MAPPING_VALUE_STATE,
    YAML_PARSE_FLOW_SEQUENCE_FIRST_ENTRY_STATE,
    YAML_PARSE_FLOW_SEQUENCE_ENTRY_STATE,
    YAML_PARSE_FLOW_SEQUENCE_ENTRY_MAPPING_KEY_STATE,
    YAML_PARSE_FLOW_SEQUENCE_ENTRY_MAPPING_VALUE_STATE,
    YAML_PARSE_FLOW_SEQUENCE_ENTRY_MAPPING_END_STATE,
    YAML_PARSE_FLOW_MAPPING_FIRST_KEY_STATE,
    YAML_PARSE_FLOW_MAPPING_KEY_STATE,
    YAML_PARSE_FLOW_MAPPING_VALUE_STATE,
    YAML_PARSE_FLOW_MAPPING_EMPTY_VALUE_STATE,
    YAML_PARSE_END_STATE
} yaml_parser_state_t;
typedef struct yaml_alias_data_s {
    yaml_char_t *anchor;
    int index;
    yaml_mark_t mark;
} yaml_alias_data_t;
typedef struct yaml_parser_s {
    yaml_error_type_t error;
    const char *problem;
    size_t problem_offset;
    int problem_value;
    yaml_mark_t problem_mark;
    const char *context;
    yaml_mark_t context_mark;
    yaml_read_handler_t *read_handler;
    void *read_handler_data;
    union {
        struct {
            const unsigned char *start;
            const unsigned char *end;
            const unsigned char *current;
        } string;
        FILE *file;
    } input;
    int eof;
    struct {
        yaml_char_t *start;
        yaml_char_t *end;
        yaml_char_t *pointer;
        yaml_char_t *last;
    } buffer;
    size_t unread;
    struct {
        unsigned char *start;
        unsigned char *end;
        unsigned char *pointer;
        unsigned char *last;
    } raw_buffer;
    yaml_encoding_t encoding;
    size_t offset;
    yaml_mark_t mark;
    int stream_start_produced;
    int stream_end_produced;
    int flow_level;
    struct {
        yaml_token_t *start;
        yaml_token_t *end;
        yaml_token_t *head;
        yaml_token_t *tail;
    } tokens;
    size_t tokens_parsed;
    int token_available;
    struct {
        int *start;
        int *end;
        int *top;
    } indents;
    int indent;
    int simple_key_allowed;
    struct {
        yaml_simple_key_t *start;
        yaml_simple_key_t *end;
        yaml_simple_key_t *top;
    } simple_keys;
    struct {
        yaml_parser_state_t *start;
        yaml_parser_state_t *end;
        yaml_parser_state_t *top;
    } states;
    yaml_parser_state_t state;
    struct {
        yaml_mark_t *start;
        yaml_mark_t *end;
        yaml_mark_t *top;
    } marks;
    struct {
        yaml_tag_directive_t *start;
        yaml_tag_directive_t *end;
        yaml_tag_directive_t *top;
    } tag_directives;
    struct {
        yaml_alias_data_t *start;
        yaml_alias_data_t *end;
        yaml_alias_data_t *top;
    } aliases;
    yaml_document_t *document;
} yaml_parser_t;
YAML_DECLARE(int)
yaml_parser_initialize(yaml_parser_t *parser);
YAML_DECLARE(void)
yaml_parser_delete(yaml_parser_t *parser);